--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,69 @@ body{
     color: #fff;
     text-align: center;
 }
+
+.buy{
+    margin-left: 40%;       
+}
+
+/* servicios */
+.imgservicios{
+    width: 180px;
+    height: 160px;
+}
+
+
+/* footer */
+#page-footer{
+    background-color: rgb(44, 44, 45);
+}
+
+#page-footer a{
+    color: #fff;
+}
+
+#page-footer .ftcontainer{
+    display: flex;
+    padding: 40px 0;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: center;
+    flex-wrap: nowrap;
+    
+}
+
+.footer__cta-ftcontainer{
+    max-width: 1200px;
+    justify-content: space-between;
+    margin: 0 auto;
+    flex-direction: row;
+}
+
+.footer__cta-ftcontainer .cta__txt{
+    font-size: 3.6rem;
+    max-width: 50%;
+    padding: 0;
+}
+
+.footer__cta-ftcontainer .cta__btn{
+    margin-top: 0;
+}
+
+.footer__menu figure{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    margin-top: 13px;
+}
+
+.footer__menu{
+    max-width: 300px;
+    padding-left: 1em;/*1em son 10px*/
+    grid-column: 1/3;
+
+
+}
+/* falta por terminar el footer*/
+
+
