--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,67 @@ body{
     margin: 1em 0;
     padding: 5px 0 5px .5em;
 }
+
+.ft-social{
+    color: #fff;
+    width: 30px;
+    border-radius: 100%;
+    height: auto;
+    display: inline-block;
+    font-size: 14px;
+    line-height: inherit;
+}
+
+.ft-link{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.footer__link a{
+    text-decoration: none;
+}
+
+.footer__title{
+    font-weight: 700;
+    color: #fff;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+#page-footer .ftcontainer{
+    max-width: 1200px;
+    flex-direction: row;
+    padding: 70px 0;
+    justify-content: space-between;
+    margin: 0 auto;
+
+}
+
+.footer__logo{
+    width: 100%;
+}
+
+
+.footer__info{
+    font-size: 14px;
+    color: #fff;
+    line-height: 30px;
+}
+
+footer{
+    min-height: 100px;
+    background-color: #000;
+}
+
+.footer__link:nth-child(1){
+    border-left: 2px solid #480404;
+}
+
+.footer__link:nth-child(2){
+    border-left: 2px solid #faea07;
+}
+
+.footer__link:nth-child(3){
+    border-left: 2px solid #0daeda;
+}
