--- a/css/style.css
+++ b/css/style.css
@@ -230,3 +230,13 @@ footer{
     color: rgb(0, 0, 0);
     text-align: center;
 }
+
+#simulador .titulo{
+    width: 100%;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+
+#simulador{
+    margin-top: 80px;
+}
