--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,12 @@ footer{
 #simulador{
     margin-top: 80px;
 }
+
+#contacto{
+    margin-top: 100px;
+}
+
+#contacto .titulo{
+    width: 100%;
+    text-align: center;
+}
